--- a/src/components/scss/_header.scss
+++ b/src/components/scss/_header.scss
@@ -4,13 +4,10 @@
   box-shadow: $box-shadow;
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
+  padding: 1rem $pad;
   position: sticky;
   top: 0;
   z-index: 10;
-  @include media(sm){
-    padding: 1rem;
-  }
 }
 
 .siteLogo {
